# paperboy

./: .gitignore  Paperboy.sln  README.md  devcontainer.json  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
apps/contentprocessor/PaperBoy.ContentProcessor/: LanguageModelConnectionString.cs  PaperBoy.ContentProcessor.csproj  Program.cs  ServiceCollectionExtensions.cs
apps/contentprocessor/PaperBoy.ContentProcessor.Tests/: PaperBoy.ContentProcessor.Tests.csproj  UnitTest1.cs
apps/contentstore/PaperBoy.ContentStore/: PaperBoy.ContentStore.csproj  Program.cs
apps/contentstore/PaperBoy.ContentStore.Tests/: PaperBoy.ContentStore.Tests.csproj  TestObjectFactory.cs
apps/dashboard/: package-lock.json  package.json
apps/dashboard/PaperBoy.Dashboard/: PaperBoy.Dashboard.csproj  Program.cs  package-lock.json  package.json  tailwind.config.js
apps/dashboard/PaperBoy.Dashboard.Tests/: UnitTest1.cs
apps/dashboard/app/: page.tsx
apps/orchestrator/PaperBoy.Orchestrator/: Program.cs  (+1 more)
docs/: 01-introduction-and-goals.md  02-constraints.md  03-context-and-scope.md  04-solution-strategy.md  05-building-block-view.md
docs/diagrams/: architecture.drawio
hosting/Paperboy.AppHost/: Paperboy.AppHost.csproj  Program.cs
paperboy/: asgi.py  urls.py  wsgi.py
paperboy/settings/: base.py  development.py  production.py
shared/Paperboy.ServiceDefaults/: Extensions.cs  Paperboy.ServiceDefaults.csproj
sql/initdb/: 00-create-databases.sql
tests/: submit-paper.http
(+157 files in other folders)
